--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "lmstudio>=1.5.0",
+    "opencv-contrib-python>=4.12.0.88",
     "py-trees>=2.3.0",
+    "pydantic>=2.12.4",
 ]
